(rule
 (alias gobview)
 (target dist)
 (deps src/App.bc.js goblint-http-server/goblint_http.exe node_modules webpack.config.js)
 (action
  (progn
   (run npx webpack build)
   (system "mkdir -p ../../../gobview/_dist && cp -f ./dist/* ../../../gobview/_dist/"))))

(rule
 (targets node_modules)
 (deps package-lock.json)
 (action
  (run npm ci)))
