(executable
 (name goblint_http)
 (public_name goblint-http)
 (promote (until-clean) (into ../..))
 (libraries
  batteries.unthreaded
  cohttp
  cohttp-lwt
  cohttp-lwt-unix
  cohttp-server-lwt-unix
  conduit-lwt-unix
  jsonrpc
  lwt.unix
  yojson
  uri)
 (preprocess
  (pps lwt_ppx ppx_deriving_yojson)))
