(lang dune 2.9)

(name goblint-http-server)

(version 0.1.0)

(license ISC)

(authors "Kerem Çakırer <kerem.cakirer@tum.de>")

(maintainers "Kerem Çakırer <kerem.cakirer@tum.de>")

(source
 (github keremc/goblint-http-server))

(generate_opam_files true)

(package
 (name goblint-http-server)
 (synopsis "Goblint HTTP server")
 (depends
  batteries
  cohttp-lwt
  cohttp-lwt-unix
  fileutils
  jsonrpc
  lwt
  lwt_ppx
  ppx_yojson_conv
  yojson
  (ocaml-lsp-server :dev)
  (ocp-indent :dev)))
