(include_subdirs unqualified)

(executables
 (names App)
 (modes js)
 (libraries batteries.unthreaded gen_js_api goblint-cil
   goblint-cil.syntacticsearch goblint.lib js_of_ocaml-lwt jsoo-react.lib lwt
   ppx_deriving.runtime ppx_deriving_yojson.runtime xml-light yojson zarith
   zarith_stubs_js)
 (js_of_ocaml
  (javascript_files react-requires.js static-requires.js))
 (preprocess
  (pps gen_js_api.ppx ppx_blob js_of_ocaml-ppx jsoo-react.ppx)))

(rule
 (targets Graphviz.ml)
 (deps Graphviz.mli)
 (action
  (run %{bin:gen_js_api} -o %{targets} %{deps})))

(alias
 (name default)
 (deps App.js static/primitive.css static/prism.css static/prism.js))
