(include_subdirs unqualified)

(executables
 (names App)
 (modes js)
 (libraries
  batteries.unthreaded
  cohttp
  cohttp-lwt
  cohttp-lwt-jsoo
  fpath
  gen_js_api
  goblint-cil
  goblint-cil.syntacticsearch
  goblint.lib
  goblint.timing
  goblint.sites.js
  goblint.build-info.js
  integers_stubs_js
  ctypes_stubs_js
  js_of_ocaml-lwt
  jsoo-react.lib
  lwt
  ppx_deriving_yojson.runtime
  ppx_deriving.runtime
  uri
  yojson
  zarith
  zarith_stubs_js)
 (js_of_ocaml
  (javascript_files
   ../runtime/stubs.js
   ../runtime/marshal.js
   ../runtime/sha_stubs.js
   react-requires.js
   static-requires.js))
 (preprocess
  (pps gen_js_api.ppx js_of_ocaml-ppx jsoo-react.ppx)))

(rule
 (targets Graphviz.ml)
 (deps Graphviz.mli)
 (action
  (run %{bin:gen_js_api} -o %{targets} %{deps})))

(alias
 (name default)
 (deps App.bc.js static/primitive.css static/prism.css static/prism.js))
